[package]
name = "bluez-monitor"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"
serde = "1.0.199"
bluez-async = "0.7.2"